--- a/source/resources/assets/assets-frontend/css/custom.css
+++ b/source/resources/assets/assets-frontend/css/custom.css
@@ -80,14 +80,24 @@ header .navbar-default .navbar-toggle:focus {
 	background: url('/front/images/footer.webp') !important;
 }
 
-.item{
-	height: 200px;
-	background-color:red;
-
+.clients-item{
+	height: 150px;
 }
 
-.item > * {
-	vertical-align: middle;
+.clients-item img{
+	height: 90px;
+	width: auto !important;
+	margin-left: auto;
+    margin-right: auto;
+    margin-top:20px;
+}
+
+.tnit-services-item p{
+	font-size: 16px !important;
+}
+
+.tnit-services-item h4 {
+	text-transform: none;
 }
 
 /**
