--- a/source/public/front/css/all.css
+++ b/source/public/front/css/all.css
@@ -871,18 +871,20 @@ Innner Css
     text-align: center;
     position: relative;
 }
-#tnit-blog-banner{
-    background: url(../images/inner-banner-blog-img.jpg) top center no-repeat;
+
+
+#tnit-about-banner{
+    background: url('/front/images/inner-banners/innber-banner-about-us.jpg') top center no-repeat;
     background-size: cover;
 }
-#tnit-blog-banner_v2{
-    background: url(../images/inner-banner-blog-img2.jpg) top center no-repeat;
-    background-size: cover;
-}
+
+
 #tnit-contact-banner{
     background: url(../images/inner-banner-contact-img.jpg) top center no-repeat;
     background-size: cover;
 }
+
+
 #tnit-services-banner{
     background: url(../images/inner-banner-services-img.jpg) top center no-repeat;
     background-size: cover;
@@ -1937,7 +1939,7 @@ Counter Section
 .tnit-stats-section{
     float: left;
     width: 100%;
-    background: url('../images/status-bg-img.png') top center fixed no-repeat;
+    background: url('/front/images/status-bg-img.png') top center fixed no-repeat;
     position: relative;
     padding: 50px 0 20px;
 }
@@ -18572,4 +18574,51 @@ header .navbar-default .navbar-toggle:focus {
 
 .widget-about .about-info-listed {
     padding-left: 86px !important;
+}
+
+.our-values{
+	padding-top: 5%;
+}
+
+
+.our-vision-list ul {
+  list-style: none;
+  padding: 0;
+}
+.our-vision-list li {
+  padding-left: 1.3em;
+  padding-top: 10px;
+}
+
+
+
+.our-vision-list li:before {
+  content: "\f00c"; /* FontAwesome Unicode */
+  font-family: FontAwesome;
+  display: inline-block;
+  margin-left: -1.3em; /* same as padding-left set on li */
+  width: 1.3em; /* same as padding-left set on li */
+}
+
+.our-vision-list li span{
+	font-weight: 600;
+}
+
+
+
+.our-vision-dropdown-content{
+	padding: 10px 10px 10px 20px;
+	text-align: justify;
+}
+
+.our-values-section{
+	padding: 10px 0 20px 0;
+}
+
+.about-us-main{
+	padding: 15px;
+}
+
+.about-us-desc{
+	text-align: justify;
 }
