--- a/source/resources/assets/assets-frontend/css/style.css
+++ b/source/resources/assets/assets-frontend/css/style.css
@@ -871,18 +871,20 @@ Innner Css
     text-align: center;
     position: relative;
 }
-#tnit-blog-banner{
-    background: url(../images/inner-banner-blog-img.jpg) top center no-repeat;
+
+
+#tnit-about-banner{
+    background: url('/front/images/inner-banners/innber-banner-about-us.jpg') top center no-repeat;
     background-size: cover;
 }
-#tnit-blog-banner_v2{
-    background: url(../images/inner-banner-blog-img2.jpg) top center no-repeat;
-    background-size: cover;
-}
+
+
 #tnit-contact-banner{
     background: url(../images/inner-banner-contact-img.jpg) top center no-repeat;
     background-size: cover;
 }
+
+
 #tnit-services-banner{
     background: url(../images/inner-banner-services-img.jpg) top center no-repeat;
     background-size: cover;
@@ -1937,7 +1939,7 @@ Counter Section
 .tnit-stats-section{
     float: left;
     width: 100%;
-    background: url('../images/status-bg-img.png') top center fixed no-repeat;
+    background: url('/front/images/status-bg-img.png') top center fixed no-repeat;
     position: relative;
     padding: 50px 0 20px;
 }
