--- a/source/public/front/css/all.css
+++ b/source/public/front/css/all.css
@@ -18573,7 +18573,8 @@ header .navbar-default .navbar-toggle:focus {
 }
 
 .widget-about .about-info-listed {
-    padding-left: 86px !important;
+    padding-left: 0px !important;
+    display: inline-block;
 }
 
 .our-values{
@@ -18688,4 +18689,7 @@ header .navbar-default .navbar-toggle:focus {
    	font-size: 14px;
    }
 
+   .about-info-listed{
+   	
+   }
 }
