--- a/source/resources/assets/assets-frontend/css/custom.css
+++ b/source/resources/assets/assets-frontend/css/custom.css
@@ -276,4 +276,10 @@ header .navbar-default .navbar-toggle:focus {
    .about-info-listed{
    	
    }
+
+
+   .pd-res-30{
+   	padding-top: 30px;
+   }
+
 }
