--- a/source/resources/assets/assets-frontend/css/responsive.css
+++ b/source/resources/assets/assets-frontend/css/responsive.css
@@ -3,6 +3,19 @@ Media Quires For Mobile
 -------------------------------------------------*/
 @media (max-width: 480px) {
 
+	.accordion-tab h5{
+		
+		margin-left: 35px;
+	}
+
+}
+
+@media (max-width: 320px) {
+
+	.accordion-tab h5{
+		
+		margin-left: 35px;
+	}
 
 }
 
