--- a/source/public/front/css/all.css
+++ b/source/public/front/css/all.css
@@ -1145,7 +1145,7 @@ Services Section
     top: 0;
     width: 369px;
     height: 581px;
-    background: url('../images/offering-img-before.jpg');
+    /*background: url('../images/offering-img-before.jpg');*/
     z-index: -1;
 }
 .tnit-services-item{
@@ -18521,7 +18521,7 @@ header .navbar-default .navbar-toggle:focus {
 
 
 .tnit-services-section:before{
-	background: url('/front/images/home_page/we_are_offering.webp') !important;
+	/*background: url('/front/images/home_page/we_are_offering.webp') !important;*/
 }
 
 .tnit-menu-section{
